--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
     }
 
     .container {
-      width: min(87.2vw, 384px);
+      width: min(327px, 384px); /*will two px units work?*/
       background-color: hsl(0, 0%, 100%);
+      margin: auto, 24px;
+      padding: 24px;
+      gap: 24px;
+      border: 1px, solid, #111;
+      border-radius: 20px;
+      box-shadow: 8px 8px, 0px, 0px #000;
     }
 
 
