--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .container img {
-      width: auto;
+      width:fit-content;
       height: 200px;
       border-radius: 10px;
     }
@@ -47,9 +47,15 @@
     .subcontainer {
       width: auto;
       height: auto;
-      margin: 24px;
+      margin: 24px 0px;
       line-height: 150%;
       letter-spacing: 0px;
+      color: #111;
+    }
+
+    .subcontainer img {
+      width: 32px;
+      height: 32px;
     }
 
     .text-preset1 {
@@ -60,6 +66,7 @@
     .text-preset2 {
       font-size: 16px;
       font-weight: 500;
+      color: #6b6b6b;
     }
 
     .text-preset3 {
