--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .container img {
-      width:fit-content;
+      width: max-content;
       height: 200px;
       border-radius: 10px;
     }
