syntax corrections in container

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       width: min(327px, 50%, 384px); /* Q:Will two px units work? A:Nope */
       /*max-height: 522px;*/
       height: min(501px, 50%, 522px);
-      margin: auto, 24px;
+      margin: auto 24px;
       padding: 24px;
       gap: 24px;
       border-radius: 20px;
-      border: 1px, solid, #111;
-      box-shadow: 8px 8px, 0px, 5px #000;
+      border: 1px solid #111;
+      box-shadow: 8px 8px 0px 5px #000;
     }
 
     .container img {
@@ -100,7 +100,8 @@
       </article>
     </section>
     <section aria-labelledby="author" class="subcontainer">
-      <img src="./assets/images/image-avatar.webp" alt="author-icon"> <p class="text-preset3-bold">Greg Hooper</p>
+      <img src="./assets/images/image-avatar.webp" alt="author-icon"> 
+      <p class="text-preset3-bold">Greg Hooper</p>
     </section>
   </main>
   
