New type of subcontainer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,18 @@
       color: #111;
     }
 
-    .subcontainer img {
+    .subcontainerb {
+      width: auto;
+      height: auto;
+      margin: 24px 0px;
+      line-height: 150%;
+      letter-spacing: 0px;
+      color: #111;
+      display: flex;
+      flex-flow: row nowrap;
+    }
+
+    .subcontainerb img {
       width: 32px;
       height: 32px;
     }
@@ -99,7 +110,7 @@
         <p class="text-preset2">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </article>
     </section>
-    <section aria-labelledby="author" class="subcontainer">
+    <section aria-labelledby="author" class="subcontainerb">
       <img src="./assets/images/image-avatar.webp" alt="author-icon"> 
       <p class="text-preset3-bold">Greg Hooper</p>
     </section>
