Adjustment to text margin and author flow

--- a/index.html
+++ b/index.html
@@ -64,32 +64,38 @@
       color: #111;
       display: flex;
       flex-flow: row nowrap;
+      align-items: center;
     }
 
     .subcontainerb img {
       width: 32px;
       height: 32px;
+      margin-right: 5.5px;
     }
 
     .text-preset1 {
       font-size: 24px;
       font-weight: 700;
+      margin: 12px 0px;
     }
 
     .text-preset2 {
       font-size: 16px;
       font-weight: 500;
       color: #6b6b6b;
+      margin: 12px 0px;
     }
 
     .text-preset3 {
       font-size: 14px;
       font-weight: 500;
+      margin: 12px 0px;
     }
 
     .text-preset3-bold {
       font-size: 14px;
       font-weight: 700;
+      margin: 12px 0px;
     }
 
 
