--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     @font-face {
       font-family: "Figtree";
-      src: url(./assets/fonts/Figtree-VariableFont_wght.ttf) format("truetype");
+      src: url(./assets/fonts/Figtree-VariableFont_wght.ttf) format('truetype');
+      src: url(./assets/fonts/Figtree-Italic-VariableFont_wght.ttf) format('truetype');
     }
 
     body {
@@ -28,10 +29,8 @@
 
     .container {
       background-color: hsl(0, 0%, 100%);
-      /*max-width: 384px;*/
-      width: clamp(279px, 90%, 336px); /* Q:Will two px units work? A:Nope */
-      /*max-height: 522px;*/
-      height: clamp(453px, 90%, 474px);
+      width: clamp(279px, 50%, 336px); /* Q:Will two px units work? A:Nope */
+      height: clamp(453px, 50%, 474px);
       margin: auto 24px;
       padding: 24px;
       gap: 24px;
@@ -74,26 +73,26 @@
     }
 
     .text-preset1 {
-      font-size: 24px;
+      font-size: clamp(20px, 50%, 24px); 
       font-weight: 700;
       margin: 12px 0px;
     }
 
     .text-preset2 {
-      font-size: 16px;
+      font-size: clamp(14px, 50%, 16px);
       font-weight: 500;
       color: #6b6b6b;
       margin: 12px 0px;
     }
 
     .text-preset3 {
-      font-size: 14px;
+      font-size: clamp(12px, 50%, 14px);
       font-weight: 500;
       margin: 12px 0px;
     }
 
     .text-preset3-bold {
-      font-size: 14px;
+      font-size: clamp(12px, 50%, 14px);
       font-weight: 700;
       margin: 12px 0px;
     }
