--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <img src="./assets/images/illustration-article.svg" alt="illustration">
     <section aria-labelledby="content" class="subcontainer">
       <article>
-        <h1 class="text-preset3-bold" class="minicontainer">Learning</h1>
+        <h1 class="text-preset3-bold minicontainer">Learning</h1>
         <p class="text-preset3">Published 21 Dec 2023</p>
       </article>
       <article>
