--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     .subcontainerb {
       width: auto;
       height: auto;
-      margin: 24px 0px;
+      margin: 0px;
       line-height: 150%;
       letter-spacing: 0px;
       color: #111;
@@ -72,11 +72,13 @@
     }
 
     .minicontainer {
-      width: clamp(73px, 50% ,82px);
-      height: clamp(26px, 50%, 29px);
+      width: auto;
+      height: auto;
       background-color: hsl(47, 88%, 63%);
       padding: 4px 12px;
       border-radius: 4px;
+      justify-content: center;
+      align-items: center;
     }
     
     .text-preset1 {
