subcontainer change and text

--- a/index.html
+++ b/index.html
@@ -64,15 +64,20 @@
       flex-flow: row nowrap;
       align-items: center;
     }
-
+    
     .subcontainerb img {
       width: 32px;
       height: 32px;
       margin-right: 5.5px;
     }
+    
+    .subcontainerb p {
+      font-size: 14px;
+      font-weight: bold;
+    }
 
     .minicontainer {
-      width: auto;
+      width: max-content;
       height: auto;
       background-color: hsl(47, 88%, 63%);
       padding: 4px 12px;
@@ -131,7 +136,7 @@
     </section>
     <section aria-labelledby="author" class="subcontainerb">
       <img src="./assets/images/image-avatar.webp" alt="author-icon"> 
-      <p class="text-preset3-bold">Greg Hooper</p>
+      <p>Greg Hooper</p>
     </section>
   </main>
   
