--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       width: max(100%, 279px);
       height: 200px;
       border-radius: 10px;
+      object-fit: cover;
     }
 
     .subcontainer {
@@ -89,7 +90,7 @@
     }
     
     .text-preset1 {
-      font-size: min(20px, 24px); 
+      font-size: clamp(20px, 2vw, 24px); 
       font-weight: 700;
       margin: 12px 0px;
     }
@@ -100,20 +101,20 @@
     }
 
     .text-preset2 {
-      font-size: min(14px, 16px);
+      font-size: clamp(14px, 1.4vw, 16px);
       font-weight: 500;
       color: #6b6b6b;
       margin: 12px 0px;
     }
 
     .text-preset3 {
-      font-size: min(12px, 14px);
+      font-size: clamp(12px, 1.2vw, 14px);
       font-weight: 500;
       margin: 12px 0px;
     }
 
     .text-preset3-bold {
-      font-size: min(12px, 14px);
+      font-size: clamp(12px, 1.2vw, 14px);
       font-weight: 700;
       margin: 12px 0px;
     }
