--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     .container {
       background-color: hsl(0, 0%, 100%);
-      width: clamp(279px, 50%, 336px); /* Q:Will two px units work? A:Nope */
+      width: clamp(279px, 50%, 336px); /* Q:Will two px units work? A:Nope :p */
       height: clamp(453px, 50%, 474px);
       margin: auto 24px;
       padding: 24px;
@@ -91,7 +91,7 @@
     
     .text-preset1 {
       font-size: clamp(20px, 3vw, 24px); 
-      font-weight: 700;
+      font-weight: 800;
       margin: 12px 0px;
     }
 
@@ -115,7 +115,7 @@
 
     .text-preset3-bold {
       font-size: clamp(12px, 2vw, 14px);
-      font-weight: 700;
+      font-weight: 800;
       margin: 12px 0px;
     }
 
@@ -145,8 +145,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Chavakn0">Chavakno</a>.
   </div>
 </body>
 </html>
-<>
