Footer and id's

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 <body>
   <main class="container">
     <img src="./assets/images/illustration-article.svg" alt="illustration">
-    <section aria-labelledby="content" class="subcontainer">
+    <section aria-labelledby="learning-heading" class="subcontainer">
       <article>
-        <h1 class="text-preset3-bold minicontainer">Learning</h1>
+        <h1 id="learning-heading" class="text-preset3-bold minicontainer">Learning</h1>
         <p class="text-preset3">Published 21 Dec 2023</p>
       </article>
       <article>
@@ -139,13 +139,13 @@
     </section>
     <section aria-labelledby="author" class="subcontainerb">
       <img src="./assets/images/image-avatar.webp" alt="author-icon"> 
-      <p>Greg Hooper</p>
+      <p id="author">Greg Hooper</p>
     </section>
   </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Chavakn0">Chavakno</a>.
-  </div>
+  </footer>
 </body>
 </html>
